# $Id$

SUBDIRS = test

parallelincludedir = $(includedir)/dune/common/parallel
parallelinclude_HEADERS = \
    collectivecommunication.hh    \
    communicator.hh     \
    indexset.hh         \
    indicessyncer.hh    \
    interface.hh        \
    localindex.hh       \
    mpicollectivecommunication.hh \
		mpicommunicator.hh	\
    mpiguard.hh         \
    mpihelper.hh        \
		mpiparallelparadigm.hh \
    mpitraits.hh        \
    plocalindex.hh      \
    remoteindices.hh    \
    selection.hh        \
		threadcommunicator.hh	\
		threadparallelparadigm.hh	\
    variablesizecommunicator.hh

include $(top_srcdir)/am/global-rules

EXTRA_DIST = CMakeLists.txt
